# hctp-python

./: .gitignore  HCTP3.txt  HCTP_2.0_Specification.md  LICENSE  MIGRATION_GUIDE.md  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/: monetisation.md
hctp/: __init__.py  core.py  curriculum.py  difficulty_engine.py  hctp_vector.py  scoring.py  tracker.py  vcapo_integration.py  viz.py
hctp/v3/: __init__.py  breadcrumbs.py  looking_glass.py  manifold.py  session.py  tunnel.py
notebooks/: hctp_demo.ipynb
tests/: test_core.py  test_tracker.py  test_v2.py  test_v3.py
