[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hctp"
version = "2.0.0"
description = "Helix Calculus Training Protocol — adaptive AI agent learning with 3D helical knowledge tracking"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "David Qicatabua", email = "dave@vuvale.ai" }
]
keywords = [
    "ai", "training", "learning", "agent", "education",
    "karpathy", "metaclasses", "python", "helix", "hctp",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
requires-python = ">=3.9"
dependencies = []   # zero mandatory dependencies — pure Python

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
dev = [
    "pytest>=7",
    "pytest-cov",
    "matplotlib>=3.7",
    "jupyter",
    "nbformat",
]

[project.urls]
Homepage    = "https://github.com/vuvale-ai/hctp-python"
Repository  = "https://github.com/vuvale-ai/hctp-python"
Issues      = "https://github.com/vuvale-ai/hctp-python/issues"
Changelog   = "https://github.com/vuvale-ai/hctp-python/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["hctp*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.coverage.run]
source = ["hctp"]
omit   = ["tests/*"]
